# LCS

./: .gitignore  CMakeLists.txt  floating.cpp  getfunc.cpp  integral.cpp  plot.gnuplot  plot.t
include/: LCS.hpp  table.hpp
lib/: CMakeLists.txt  LCS.cpp
report/: lcs.tex  lsc.tex
tests/: CMakeLists.txt  floating_tests.cpp  integral_tests.cpp  test.cpp
tests/02.two_to_all/: seq2.txt
tests/04.diff_constants/: seq2.txt
tests/06.decreasing/: seq2.txt
tests/07.simple/: seq2.txt
tests/08.unequal/: seq1.txt  seq2.txt
tests/funcs/: getfunc.cpp  script.sh
tests/funcs/cont/: seq1.txt  seq2.txt
tests/funcs/sin/: seq1.txt  seq2.txt
tests/simple/: seq1.txt
utils/: profile.h  test_runner.h
